Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52075

Lose map item focus while dragging

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.2, 5.7.1
    • 5.5.0, 5.6.0, 5.7.0 Beta
    • Location
    • None

    Description

      In attachment I am sending simple example.
      1. Drag Rectangle.
      2. Move mouse quickly, out of Rectangle border.

      When draggable item is not a map item, there is no possibility to lose focus while dragging even with very fast mouse movements.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            jzrebiec jzrebiec
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes